button added cards alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,7 @@
 #nav-link {
     font-size:2rem !important;
 }
-.card-img-top{
-    max-width: 300px;
-}
+
 
 #projects{
     text-decoration: underline;
